--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="google-site-verification" content="lpHIk2DTJ2YYEG5cVtmLeQGpjam8j-RKXqoDBtkpxl4" />
 
   {% capture title %}
     {%- if page.share-title -%}
